raps-kernel/src/auth/snapshots/raps_kernel__auth__tests__contract_error_401.snap
---
source: raps-kernel/src/auth/tests.rs
assertion_line: 407
expression: response
---
ApsErrorResponse {
    error_code: Some(
        "AUTH-001",
    ),
    description: None,
    detail: None,
    reason: None,
    developer_message: Some(
        "The access token provided is invalid or has expired.",
    ),
}
