raps-kernel/src/auth/snapshots/raps_kernel__auth__tests__contract_error_429.snap
---
source: raps-kernel/src/auth/tests.rs
assertion_line: 414
expression: response
---
ApsErrorResponse {
    error_code: Some(
        "RATE-001",
    ),
    description: None,
    detail: None,
    reason: Some(
        "Rate limit exceeded. Please wait before making more requests.",
    ),
    developer_message: None,
}
