raps-kernel/src/auth/snapshots/raps_kernel__auth__tests__contract_token_response.snap
---
source: raps-kernel/src/auth/tests.rs
assertion_line: 400
expression: response
---
{
  "access_token": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.test-token-payload",
  "token_type": "Bearer",
  "expires_in": 3600
}
